<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="324dp"
        android:layout_height="fill_parent"
        android:id="@+id/newgameLayout"
        android:gravity="center">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:text="@string/txt1Player"
            android:id="@+id/txt1Player"
            android:background="@drawable/buttonl" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt2PlayersL"
            android:id="@+id/txt2PlayersL"
            android:background="@drawable/buttonl" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt2PlayersN"
            android:id="@+id/txtPlayersNServer"
            android:background="@drawable/buttonl" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPlayersNClient"
            android:id="@+id/txtPlayersNClient"
            android:background="@drawable/buttonl" />
    </LinearLayout>
</LinearLayout>