<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/fundojogo2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/jogador1"
            android:id="@+id/txtJogador1"
            android:paddingRight="10dp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="26dp"
            android:id="@+id/imageView1"
            android:background="@drawable/stickman" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtPontuacao"
            android:id="@+id/textView2"
            android:layout_gravity="bottom|left"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/Pontuacao"
            android:layout_gravity="bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtTentativas"
            android:id="@+id/textView4"
            android:paddingLeft="50dp"
            android:layout_gravity="bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/Tentativas"
            android:layout_gravity="bottom" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/jogador2"
            android:id="@+id/txtJogador2"
            android:paddingRight="10dp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="26dp"
            android:id="@+id/imageView2"
            android:background="@drawable/stickman" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtPontuacao"
            android:id="@+id/txtPontuacao"
            android:layout_gravity="left"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/Pontuacao2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtTentativas"
            android:id="@+id/txtTentativas"
            android:paddingLeft="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/Tentativas2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="65dp"
            android:id="@+id/gridcartas"
            android:numColumns="auto_fit"
            android:horizontalSpacing="1dp"
            android:verticalSpacing="4dp"
            android:stretchMode="spacingWidthUniform"
            android:layout_gravity="center"
            />

    </LinearLayout>

</LinearLayout>